--- a/css/style.css
+++ b/css/style.css
@@ -1,146 +1,135 @@
+@import url('https://fonts.googleapis.com/css2?family=Jost&family=Mukta&display=swap');
+
+html {
+    box-sizing: border-box;
+    height: 100%;
+}
+
 * {
+    color: #707070;
+    font-family: 'Jost', sans-serif;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
     margin: 0;
     padding: 0;
-
 }
 
 
+body {
 
-.tech_buttons {
-    -webkit-text-fill-color: #F16565;
-
-}
-span {
-
-}
-
-button.equal {
-    background-color: #F16565;
+    align-items: center;
+    display: flex;
+    height: inherit;
+    justify-content: center;
+    background-color: #9cbceb;
 }
 
-.equal span {
-    -webkit-text-fill-color: white;
-}
-
-.service_buttons {
-    -webkit-text-fill-color: #5ca7e0;
-}
-
-
-.container {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    overflow: auto;
-
+.wrapper {
+    border-radius: 4px;
+    /* flex-basis: 450px; */
+    width: 450px;
+    height: 830px;
+    box-shadow: 0px 0px 1px;
+    background-color: white;
+    box-shadow: 0 4px 30px rgba(35, 35, 35, 0.1)
+        /* padding: 15px 25px; */
 }
 
 .header {
-    margin: 15px 15px 0 15px;
-    width: auto;
-    background-color: blue;
-    height: 50px;
-    display: flex;
-    justify-content: center;
+    width: 100%;
+    display: inline-flex;
+    justify-content: space-between;
+    padding: 0px 0px 15px 0;
     align-items: center;
 }
 
-.header p {
-    width: auto;
-    height: auto;
-    float: left;
+.name_project {
+    box-sizing: content-box;
+    padding: 5px 10px;
     text-align: center;
-    top: 10px;
-
-}
-
-.input_numbers {
-    position: relative;
-    margin: 30px 15px 0 15px;
-    height: 80px;
-    bottom: 0px;
-}
-
-.saved_calculations {
+    background-color: #4f79dc;
     height: auto;
-    width: auto;
-    font-size: 25px;
-    text-align: right;
+    width: 100px;
+    border-radius: 25px;
+    color: white;
+    letter-spacing: 1px;
 }
 
-.input_numbers input {
+.switch_theme {
+    width: 28px;
+    height: 28px;
+}
+
+button.theme {
+    border: 0px;
+    background: none;
     width: 100%;
-    /* height: 100%; */
-    border: 1px solid black;
+    height: inherit;
+    background-size: cover;
+    background-image: url(/img/light-mode.png);
+}
+
+.header,
+.calc-buttons {
+    padding: 15px 25px;
+}
+
+.screen {
+    background-color: #ececec;
+    padding: 50px 20px 30px 20px;
     text-align: right;
+    overflow: auto;
+}
+
+.result {
+    font-size: 70px;
+    overflow: auto;
+}
+
+.expression {
+    font-size: 30px;
+    overflow: auto;
+}
+
+/* &times; */
+.calc-button-row {
+    display: flex;
+    justify-content: space-between;
+    margin: 5% 0;
+}
+
+.calc-button {
+    border-radius: 100px;
+    flex-basis: 20%;
+    height: 80px;
     font-size: 45px;
     border: 0px;
 
 }
 
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+.calc-button:last-child {
+    background-color: #b9d6e3;
+    color: white;
+    padding-bottom: 5px;
 }
 
-input::-webkit-input-placeholder {
-    text-align: right;
+
+.service_btn {
+    background-color: #d2d2d2;
+    color: white;
+    font-size: 35px;
 }
 
-.switch_theme {
-    margin-left: auto;
-    width: 80px;
-    height: 40px;
-    background-color: grey;
-    float: right;
+.equal {
+    background-color: #4f79dc;
+    color: white;
+    padding-bottom: 5px;
 }
 
-.calculator {
-    border: 1px solid black;
-    border-radius: 10px;
-    width: 500px;
-    height: 700px;
-    /* background-color: white; */
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.buttons_container {
-    width: 100%;
-    height: 70%;
-    background-color: 0;
-    border-radius: 10px;
-    position: absolute;
-    bottom: 0;
-}
-
-.buttons {
-    width: fit-content;
-    /* margin-left: auto;
-    margin-right: auto; */
-    margin: 15px auto 0 auto
-}
-
-.buttons button {
-    padding: 0;
-    width: 100px;
-    height: 70px;
-    border: 0px;
-    border-radius: 10px;
-    font-size: 40px;
-    align-items: center;
-    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.1);
-}
-
-button.zero {
-    width: 219px;
-}
-
-.buttons button:not(:last-child) {
-    margin: 20px 15px 0 0;
+.bck_color {
+    background: none;
 }
