adding picture for dark mode btn

--- a/css/style.css
+++ b/css/style.css
@@ -140,20 +140,25 @@ button.theme {
     background-color: #1d1d1d;
 }
 
-.dark .screen { 
+.dark .screen {
     background-color: #222222;
     color: #313131;
 }
 
-.dark .service_btn{
+.dark .service_btn {
     color: #f9f9f9;
     background-color: #313131;
 }
 
-.dark .calc-button:last-child{
+.dark .calc-button:last-child {
     background-color: #4567b6;
 }
 
-.dark .equal{
+.dark .equal {
     background-color: #0048f2;
+}
+
+.dark button.theme{
+    background-size: cover;
+    background-image: url(/img/night-mode.png);
 }
